Implementação para a possibilidade de um ADMIN deletar uma feira e ajuste na chamada de interesse